--- a/TimeyApplication/imgui.ini
+++ b/TimeyApplication/imgui.ini
@@ -4,7 +4,8 @@ Size=500,200
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=60,60
+ViewportPos=160,160
+ViewportId=0x9F5F46A1
 Size=400,400
 Collapsed=0
 
@@ -14,8 +15,9 @@ Size=191,48
 Collapsed=1
 
 [Window][Dear ImGui Demo]
-Pos=0,362
-Size=1280,358
+ViewportPos=350,110
+ViewportId=0xA4D966FE
+Size=1280,780
 Collapsed=0
 DockId=0x00000003,0
 
@@ -34,9 +36,39 @@ ViewportId=0x4647B76E
 Size=1274,779
 Collapsed=0
 
+[Window][Timey]
+Size=1280,780
+Collapsed=0
+
+[Window][Dear ImGui Metrics]
+Pos=518,320
+Size=383,708
+Collapsed=1
+
+[Window][Style Editor]
+ViewportPos=636,255
+ViewportId=0xE3E9716C
+Size=339,856
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=275,217
+Size=466,391
+Collapsed=0
+
+[Window][Horizontal contents size demo window]
+Pos=60,60
+Size=316,268
+Collapsed=0
+
+[Window][Add Session]
+ViewportPos=467,130
+ViewportId=0xDE215201
+Size=500,800
+Collapsed=0
+
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=100,100 Size=1280,720 Split=Y
+DockNode    ID=0x00000001 Pos=350,110 Size=1280,780 Split=Y
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=1280,360 Selected=0x5E16F277
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=1280,358 Selected=0xE927CF2F
-DockSpace   ID=0x3BC79352 Window=0x4647B76E Pos=101,137 Size=1274,741 CentralNode=1
 
