--- a/TimeyApplication/imgui.ini
+++ b/TimeyApplication/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Minimal Window]
-Pos=12,43
+Pos=0,0
 Size=500,200
 Collapsed=0
 
@@ -14,8 +14,8 @@ Size=191,48
 Collapsed=1
 
 [Window][Dear ImGui Demo]
-Pos=0,0
-Size=1280,780
+Pos=496,4
+Size=715,746
 Collapsed=0
 DockId=0x00000003,0
 
@@ -61,7 +61,7 @@ Size=316,268
 Collapsed=0
 
 [Window][Add Session]
-ViewportPos=394,145
+ViewportPos=411,139
 ViewportId=0xDE215201
 Size=500,800
 Collapsed=0
@@ -71,8 +71,14 @@ Pos=46,83
 Size=500,400
 Collapsed=0
 
+[Window][Dear ImGui Style Editor]
+ViewportPos=284,43
+ViewportId=0x6D551092
+Size=339,962
+Collapsed=0
+
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=112,143 Size=1280,780 Split=Y
+DockNode    ID=0x00000001 Pos=596,104 Size=715,746 Split=Y
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=1280,360 Selected=0x5E16F277
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=1280,358 Selected=0xE927CF2F
 
